Add smiley button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <body onload="onInit()">
     <h1>Mine Sweeper</h1>
+    <div>
+      <button class="btnSmiley" onclick="newGame()">😃</button>
+    </div>
     <div class="board-container" style="margin: auto"></div>
     <script src="js/utils.js"></script>
     <script src="js/game.js"></script>
