--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
   <body onload="onInit()">
     <h1>Mine Sweeper</h1>
+    <div class="lives">🧡 🧡 🧡</div>
     <div>
       <button class="btnSmiley" onclick="newGame()">😃</button>
     </div>
     <div class="board-container" style="margin: auto"></div>
     <script src="js/utils.js"></script>
-    <script src="js/game.js"></script>
     <script src="js/mine.js"></script>
+    <script src="js/game.js"></script>
   </body>
 </html>
