--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
   <body onload="onInit()">
     <h1>Mine Sweeper</h1>
+    <div class="levels">
+      <button class="beginner" onClick="setLevel(BEGINNER)">BEGINNER</button>
+      <button class="mediun" onClick="setLevel(MEDIUM)">MEDIUM</button>
+      <button class="expert" onClick="setLevel(EXPERT)">EXPERT</button>
+    </div>
     <div class="lives">🧡 🧡 🧡</div>
     <div>
       <button class="btnSmiley" onclick="newGame()">😃</button>
