--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <button class="mediun" onClick="setLevel(MEDIUM)">MEDIUM</button>
       <button class="expert" onClick="setLevel(EXPERT)">EXPERT</button>
     </div>
-    <div class="lives">🧡 🧡 🧡</div>
+    <div class="lives"></div>
+    <div class="hints"></div>
     <div>
       <button class="btnSmiley" onclick="newGame()">😃</button>
     </div>
