--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <button class="btnSmiley" onclick="newGame()">😃</button>
     </div>
     <div class="board-container" style="margin: auto"></div>
+    <button class="mega-hint" onClick="onMegaHint()">Mega Hint</button>
     <script src="js/utils.js"></script>
     <script src="js/mine.js"></script>
     <script src="js/game.js"></script>
