--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       <button class="mediun" onClick="setLevel(MEDIUM)">MEDIUM</button>
       <button class="expert" onClick="setLevel(EXPERT)">EXPERT</button>
     </div>
+
     <div class="lives"></div>
     <div class="hints"></div>
-    <div>
-      <button class="btnSmiley" onclick="newGame()">😃</button>
-    </div>
+    <div class="timer"><span id="time">000</span></div>
+    <button class="btnSmiley" onclick="newGame()">😃</button>
+
     <div class="board-container" style="margin: auto"></div>
     <button class="mega-hint" onClick="onMegaHint()">Mega Hint</button>
     <script src="js/utils.js"></script>
