Best score to level

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button class="mediun" onClick="setLevel(MEDIUM)">MEDIUM</button>
       <button class="expert" onClick="setLevel(EXPERT)">EXPERT</button>
     </div>
+    <div id="score">Best Score: <span id="best-score">🤷🏽‍♀️</span> Sec</div>
 
     <div class="lives"></div>
     <div class="hints"></div>
