--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button class="expert" onClick="setLevel(EXPERT)">EXPERT</button>
       </div>
       <div class="score">Best Score: <span class="best-score">🤷🏽‍♀️</span> Sec</div>
-      <div class="timer"><span class="time">000</span></div>
-      <div class="mines">Mines to reveal: <span class="mines-count"></span></div>
+      <div class="timer">⏱️<span class="time">000</span></div>
+      <div class="mines"><span class="mines-count"></span> 💣</div>
       <div class="lives"></div>
       <div class="hints"></div>
 
