--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body class="root" onload="onInit()">
     <div class="game">
-      <button class="color-mode" onclick="changeColors()">⚙️</button>
+      <button class="color-mode" onclick="changeColors()">🎨</button>
       <h1 class="title">Mine Sweeper</h1>
       <div class="levels">
         <button class="beginner" onClick="setLevel(BEGINNER)">BEGINNER</button>
